--- a/hrm/package.json
+++ b/hrm/package.json
@@ -10,6 +10,7 @@
   "author": "Mushhood Haneef",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-sessions": "^1.0.6",
